--- a/flumox-client/index.html
+++ b/flumox-client/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Flumox</title>
+    <meta name="description" content="An app for playing outdoor games">
+    <meta name="theme-color" content="#262626">
 
     <script type="module" src="/src/main.ts"></script>
   </head>
