Translate index.html and web manifest

--- a/flumox-client/index.html
+++ b/flumox-client/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Flumox</title>
-    <meta name="description" content="An app for playing outdoor games">
+    <title>{{name}}</title>
+    <meta name="description" content="{{description}}">
     <meta name="theme-color" content="#262626">
 
     <script type="module" src="/src/main.ts"></script>
@@ -14,8 +14,7 @@
     <div id="app"></div>
 
     <noscript>
-      This page uses JavaScript to function. To use this page, please
-      <a href="https://www.enable-javascript.com/">enable JavaScript</a>.
+      {{enable-js}}
     </noscript>
   </body>
 </html>
