--- a/flumox-client/index.html
+++ b/flumox-client/index.html
@@ -8,6 +8,14 @@
     <meta name="description" content="{{description}}">
     <meta name="theme-color" content="#262626">
 
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/16x16.png">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/icons/icon.svg">
+
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <link rel="mask-icon" href="/icons/transparent.svg" color="#d4aa00">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/unrounded.png">
+
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
