Add maskable icons, use SVG in manifest, renames

--- a/flumox-client/index.html
+++ b/flumox-client/index.html
@@ -13,8 +13,8 @@
     <link rel="icon" type="image/svg+xml" sizes="any" href="/icons/icon.svg">
 
     <meta name="msapplication-TileColor" content="#ffc40d">
-    <link rel="mask-icon" href="/icons/transparent.svg" color="#d4aa00">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/unrounded.png">
+    <link rel="mask-icon" href="/icons/mask.svg" color="#d4aa00">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/maskable-180x180.png">
 
     <script type="module" src="/src/main.ts"></script>
   </head>
